--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.27",
+    "mammoth": "^1.11.0",
     "markdown-it": "^14.1.0",
     "markdown-it-highlightjs": "^4.2.0",
     "markdown-it-katex": "^2.0.3",
