--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
-    "build:icons": "scripts/generate-icons.sh"
+    "build:icons": "scripts/generate-icons.sh",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue,json,md}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
@@ -74,6 +81,8 @@
     "electron-vite": "^4.0.1",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.6.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "typescript": "^5.9.3",
     "unocss": "^66.5.11",
