--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "build": "electron-vite build",
-    "build:with-typecheck": "npm run typecheck && electron-vite build",
+    "build": "pnpm run rebuild:native && electron-vite build",
+    "build:with-typecheck": "npm run typecheck && pnpm run rebuild:native && electron-vite build",
     "postinstall": "electron-builder install-app-deps && pnpm run rebuild",
-    "rebuild": "electron-rebuild -f -w better-sqlite3",
+    "rebuild": "electron-rebuild -f -w better-sqlite3 && pnpm run rebuild:native",
+    "rebuild:native": "node scripts/build-native.js",
+    "rebuild:native:mac": "cd native/mac && npm install",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
