--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "electron-vite dev",
     "build": "pnpm run rebuild:native && electron-vite build",
     "build:with-typecheck": "npm run typecheck && pnpm run rebuild:native && electron-vite build",
+    "build:analyze": "pnpm run rebuild:native && electron-vite build --mode analyze",
     "postinstall": "electron-builder install-app-deps && pnpm run rebuild",
     "rebuild": "electron-rebuild -f -w better-sqlite3 && pnpm run rebuild:native",
     "rebuild:native": "node scripts/build-native.js",
